--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,27 +5,158 @@
   background-color: #38AEF0;
   color: #FFFFFF;
   text-align: center;
+  display: none;
 }
-
-
 .chat{
+  display: flex;
   .chat-side{
     background-color: #2f3e51;
-    height: 100vh;
+    color: #FFF;
     width: 300px;
-    float: left;
-    .chat-side__user-name{
+    min-width: 300px;
+    .chat-side__user{
       background-color: #253141;
-      height: 90px;
+      .user{
+        padding: 35px 20px 40px 20px;
+        .name{
+          font-weight: bold;
+          font-size: 16px;
+        }
+        .edit{
+          display: inline;
+          float: right;
+          margin: 0 3px;
+        }
+        .congig{
+          display: inline;
+          float: right;
+          margin: 0 3px;
+        }
+      }
     }
-    .chat-side__group-name{
+    .chat-side__group{
       background-color: #2f3e51;
+      .group-list{
+        padding: 20px 20px 0 20px;
+        .group{
+          margin: 0 0 40px 0;
+          .group-name{
+            font-size: 15px;
+          }
+          .group-comments{
+            font-size: 11px;
+            margin-top: 5px;
+          }
+        }
+      }
     }
   }
   .chat-main{
-    background-color: #DDDDDD;
-    height: 100vh;
+    background-color: #FFFFFF;
     width: calc(100vw - 300px);
-    float: left;
+    min-width: 680px;
+    position: relative;
+    .chat-main__group{
+      border: #eeeeee;
+      background-color: #FFFFFF;
+      position: relative;
+      .chat-main__group-name{
+        font-size: 20px;
+        color: #333333;
+        padding: 35px 40px 15px 40px;
+      }
+      .chat-main__group-mem{
+        font-size: 12px;
+        color: #999999;
+        padding: 0 40px 0 40px;
+      }
+        ul{
+          display: inline;
+        }
+        li{
+          display: inline;
+        }
+      .chat-main__group-edit{
+        color: #38AEF0;
+        box-sizing: border-box;
+        border: solid 1.5px;
+        padding: 0 20px 0 20px;
+        position: absolute;
+        line-height: 40px;
+        top: 28px;
+        right: 40px;
+      }
+    }
+    .chat-main__coments{
+      background-color: #F5F5F5;
+      position: absolute;
+      width: 100%;
+      height: calc(100% - 98px - 50px);
+      overflow-y: scroll;
+      .coments{
+        padding: 40px 0 0 40px;
+      }
+        .coments-user-date{
+          .user{
+            font-size: 16px;
+            font-weight: bold;
+          }
+          .date{
+            font-size: 12px;
+            color: #999999;
+          }
+        }
+        .coments-text{
+          color: #434A54;
+          font-size: 14px;
+          margin-top: 10px;
+        }
+    }
+    .chat-main__send{
+      background-color: #DCDCDC;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      form{
+        width: calc(100% - 80px);
+        display: inline-block;
+        padding: 20px 40px 20px 40px;
+        .message-text{
+          width: calc(100% - 115px);
+          display: inline-block;
+          position: relative;
+          input.message-area{
+            width: 100%;
+            height: 50px;
+            box-sizing: border-box;
+          }
+          input.message-area::placeholder{
+          padding-left: 10px;
+          font-size: 16px;
+          color: #434A54;
+          }
+          label{
+          position: absolute;
+          line-height: 50px;
+          right: 10px;
+          bottom: 0;
+            input.image{
+            display: none;
+            }
+          }
+        }
+        input.message-button{
+          border-style: none
+        }
+        .message-button{
+          background-color: #38AEF0;
+          color: #FFFFFF;
+          width: 100px;
+          float: right;
+          text-align: center;
+          line-height: 50px;
+        }
+      }
+    }
   }
 }
