--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -29,67 +29,67 @@
           %li.main__group-member メンバー３
       .main__group-edit
         %a Edit
-    .main__coments
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
-      .coment
-        .coment__data
-          %span.coment__user user01
-          %span.coment__date 2016/10/02 06:27:07
-        .coment__text コメントコメントコメント
+    .main__comments
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
+      .comment
+        .comment__data
+          %span.comment__user user01
+          %span.comment__date 2016/10/02 06:27:07
+        .comment__text コメントコメントコメント
     .main__send
       %form.input-area{:action => "", :method => "post"}
         .input-area__text
