--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,3 @@
-
 %p.notification チャットグループが作成されました。
 .container
   .side
@@ -20,14 +19,14 @@
           .group-list__group-comments グループ3のコメント
   .main
     .main__group
-      .main__group-name グループ１
-      .main__group-mem
+      .group-name グループ１
+      .group-member
         %span member
-        %ul.main__group-members
-          %li.main__group-member メンバー１
-          %li.main__group-member メンバー２
-          %li.main__group-member メンバー３
-      .main__group-edit
+        %ul.group-members
+          %li.group-mem メンバー１
+          %li.group-mem メンバー２
+          %li.group-mem メンバー３
+      .group-edit
         %a Edit
     .main__comments
       .comment
