--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -3,19 +3,19 @@
   min-width: 680px;
   position: relative;
   &__group{
+    background-color: $color-common-white;
+    position: relative;
     border-style: solid;
     border-width: medium;
     border: #eeeeee;
-    background-color: $color-common-white;
-    position: relative;
     .group-name{
-      font-size: 20px;
       color: #333333;
+      font-size: 20px;
       padding: 35px 40px 15px 40px;
     }
     .group-member{
-      font-size: 12px;
       color: $color-main-whiteGray;
+      font-size: 12px;
       padding: 0 40px 0 40px;
       ul{
         display: inline-block;
@@ -26,34 +26,34 @@
     }
     .group-edit{
       color: $color-common-button;
-      box-sizing: border-box;
-      border: solid 1.5px;
-      padding: 0 20px 0 20px;
       position: absolute;
       line-height: 40px;
       top: 28px;
       right: 40px;
+      box-sizing: border-box;
+      border: solid 1.5px;
+      padding: 0 20px 0 20px;
     }
   }
 
-  &__comments{
+  &__messages{
     background-color: #F5F5F5;
     position: absolute;
     width: 100%;
     height: calc(100% - 98px - 90px);
     overflow-y: scroll;
-    .comment{
+    .message{
       padding: 40px 0 0 40px;
       &__user{
         font-size: 16px;
         font-weight: bold;
       }
       &__date{
-        font-size: 12px;
         color: $color-main-whiteGray;
+        font-size: 12px;
       }
       &__text{
-        color: $color-main-comment;
+        color: $color-main-message;
         font-size: 14px;
         margin-top: 10px;
       }
@@ -61,26 +61,26 @@
   }
   &__send{
     background-color: #DCDCDC;
-    width: 100%;
     position: absolute;
+    width: 100%;
     bottom: 0;
     .input-area{
-      width: calc(100% - 80px);
       display: inline-block;
+      width: calc(100% - 80px);
       padding: 20px 40px 20px 40px;
       &__text{
-        width: calc(100% - 115px);
-        display: inline-block;
         position: relative;
+        display: inline-block;
+        width: calc(100% - 115px);
         input.text-box{
           width: 100%;
           height: 50px;
           box-sizing: border-box;
         }
         input.text-box::placeholder{
+          color: $color-main-message;
           padding-left: 10px;
           font-size: 16px;
-          color: $color-main-comment;
         }
         label{
           position: absolute;
@@ -95,10 +95,10 @@
       &__button{
         background-color: $color-common-button;
         color: $color-common-white;
-        width: 100px;
         float: right;
         text-align: center;
         line-height: 50px;
+        width: 100px;
       }
     }
   }
