--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -7,7 +7,7 @@
         = link_to edit_user_path(current_user) do
           = fa_icon 'cog'
       %li.user__edit
-        = link_to do
+        = link_to new_group_path do
           = fa_icon 'edit'
   .side__group
     .group-list
