--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,17 +1,18 @@
 .chat-group-form
   %h1 新規チャットグループ
-  = form_for(@group, url: groups_path, html: {class: "new_chat_group", id: "new_chat_group", method:  "post"}) do |f|
-    .chat-group-form__errors
-      %h2
-        1件のエラーが発生しました。
+  = form_for @group  do |f|
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2= "#{@group.errors.count}件のエラーが発生しました。"
         %ul
-          %li エラーです
+          - @group.errors.full_messages.each do |message|
+            %li= message
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, class: "chat-group-form__label" do
           グループ名
       .chat-group-form__field--right
-        = f.text_field :name, class: "chat-group-form__input", id: "chat_group_name", placeholder: "グループ名を入力してください", type: "text"
+        = f.text_field :name, class: "chat-group-form__input", id: "member_name", placeholder: "グループ名を入力してください", type: "text"
     .chat-group-form__field.clearfix
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
       /
@@ -30,8 +31,7 @@
           チャットメンバー
       .chat-group-form__field--right
         / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-        = f.collection_check_boxes(:user_ids,User.all,:id,:name,include_hidden: false) do |b|
-          = b.label {b.check_box + b.text}
+        = f.collection_check_boxes :user_ids, User.all, :id, :name, include_hidden: false
         / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
         /
           <div id='chat-group-users'>
