--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -12,7 +12,7 @@
         = f.label :name, class: "chat-group-form__label" do
           グループ名
       .chat-group-form__field--right
-        = f.text_field :name, class: "chat-group-form__input", id: "member_name", placeholder: "グループ名を入力してください", type: "text"
+        = f.text_field :name, class: "chat-group-form__field__input", id: "member_name", placeholder: "グループ名を入力してください", type: "text"
     .chat-group-form__field.clearfix
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
       /
