--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,16 +1,18 @@
 .chat-group-form
   %h1 チャットグループ編集
-  %form#edit_chat_group_22.edit_chat_group{"accept-charset": "UTF-8", action: "/chat_groups/22", method: "post"}
-    .chat-group-form__errors
-      %h2
-        1件のエラーが発生しました。
+  = form_for @group, method: :PATCH do |f|
+    - if @group.errors.any?
+      .chat-group-form__errors
+        %h2= "#{@group.errors.count}件のエラーが発生しました。"
         %ul
-          %li エラーです
+          - @group.errors.full_messages.each do |message|
+            %li= message
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        %label.chat-group-form__label{for: "chat_group_name"} グループ名
+        = f.label :name,class: "chat-group-form__label" do
+          グループ名
       .chat-group-form__field--right
-        %input#chat_group_name.chat-group-form__input{name: "chat_group[name]", placeholder: "グループ名を入力してください", type: "text", value: "ほげー"}/
+        = f.text_field :name, class: "chat-group-form__field__input",id: "chat_group_name", placeholder: "グループ名を入力してください", type: "text", value: "#{@group.name}"
     .chat-group-form__field.clearfix
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
       /
@@ -25,9 +27,12 @@
         </div>
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
+        = f.label :user_id,class: "chat-group-form__label" do
+          チャットメンバー
+      .chat-group-form__field--right
+        = f.collection_check_boxes :user_ids, User.all,  :id, :name, include_hidden: false
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
-        / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-        %input.chat-group-form__action-btn{"data-disable-with": "Save", name: "commit", type: "submit", value: "Save"}/
+        = f.submit "Save", class: "chat-group-form__action-btn"
+
