--- a/app/assets/stylesheets/config/_reset.scss
+++ b/app/assets/stylesheets/config/_reset.scss
@@ -122,5 +122,8 @@ select {
 legend {
     color:#000;
 }
+a{
+    text-decoration: none;
+}
 /* YUI CSS Detection Stamp */
 #yui3-css-stamp.cssreset { display: none; }
