--- a/app/assets/stylesheets/modules/_side.scss
+++ b/app/assets/stylesheets/modules/_side.scss
@@ -30,10 +30,12 @@
       }
       &__group-name{
         font-size: 15px;
+        color: $color-common-white;
       }
       &__group-messages{
         font-size: 11px;
         margin-top: 5px;
+        color: $color-common-white;
       }
     }
   }
