--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -11,7 +11,7 @@
           = fa_icon 'edit'
   .side__group
     .group-list
-      - @groups.each do |group|
+      - current_user.groups.each do |group|
         .group-list__group
           = link_to group_messages_path(group) do
             .group-list__group-name
